<resources>
    <string name="app_name">PokeDex</string>
    <string name="_0">0</string>
    <string name="defense">Defense</string>
    <string name="_0_1">0</string>
    <string name="attack">Attack</string>
    <string name="_0l">0</string>
    <string name="hp">HP</string>
    <string name="base_stats">Base Stats</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="level">Level</string>
    <string name="_800_0_kg">800.0 kg</string>
    <string name="weight">Weight</string>
    <string name="_2_2_m">2.2 m</string>
    <string name="height">Height</string>
    <string name="none">None</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="wild_horse_pok_mon">Wild horse Pokemon</string>
    <string name="species">Species</string>
    <string name="name">Name</string>
    <string name="glastrier">Glastrier</string>
    <string name="_896">896</string>
    <string name="national_number">National Number</string>
    <string name="register_new_catch">Register new catch</string>
    <string name="poke_tracker">Poke - Tracker</string>
    <string name="title_activity_list_of_entries">Leanback ListOfEntries</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="delete">Delete</string>
</resources>