<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/poketracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poke_tracker"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register_new_catch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poketracker" />

    <TextView
        android:id="@+id/natnumTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="128dp"
        android:text="@string/national_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/natnumTV" />

    <TextView
        android:id="@+id/speciesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:text="@string/species"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTV" />

    <EditText
        android:id="@+id/speciesET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/wild_horse_pok_mon"
        app:layout_constraintBaseline_toBaselineOf="@+id/speciesTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/genderTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speciesTV" />

    <RadioGroup
        android:id="@+id/genderRG"
        android:layout_width="282dp"
        android:layout_height="62dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/genderTV"
        app:layout_constraintTop_toBottomOf="@+id/speciesET">

        <RadioButton
            android:id="@+id/maleRB"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/femaleRB"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/noneRB"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/none" />
    </RadioGroup>

    <TextView
        android:id="@+id/heightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:text="@string/height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderTV" />

    <TextView
        android:id="@+id/weightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightTV" />

    <TextView
        android:id="@+id/levelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:text="@string/level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightTV" />

    <Button
        android:id="@+id/resetBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/submit"
        app:layout_constraintBaseline_toBaselineOf="@+id/resetBT"
        app:layout_constraintStart_toEndOf="@+id/resetBT" />

    <Spinner
        android:id="@+id/levelSP"
        android:layout_width="203dp"
        android:layout_height="24dp"
        android:layout_marginEnd="45dp"
        android:contextClickable="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/levelTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/base_stats"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelTV" />

    <TextView
        android:id="@+id/hpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/hp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/attackTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/attack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hpTV" />

    <TextView
        android:id="@+id/defenseTV"
        android:layout_width="66dp"
        android:layout_height="23dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/defense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attackTV" />

    <EditText
        android:id="@+id/hpET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        app:layout_constraintBaseline_toBaselineOf="@+id/hpTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/attackET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        app:layout_constraintBaseline_toBaselineOf="@+id/attackTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/defenseET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        app:layout_constraintBaseline_toBaselineOf="@+id/defenseTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/heightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/_2_2_m"
        app:layout_constraintBaseline_toBaselineOf="@+id/heightTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/weightET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/_800_0_kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/natnumET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_896"
        app:layout_constraintBaseline_toBaselineOf="@+id/natnumTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/glastrier"
        app:layout_constraintBaseline_toBaselineOf="@+id/nameTV"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/pokebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="See Entries"
        app:layout_constraintBaseline_toBaselineOf="@+id/resetBT"
        app:layout_constraintEnd_toStartOf="@+id/resetBT" />

</androidx.constraintlayout.widget.ConstraintLayout>